--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@antv/l7": "^2.3.7",
     "@antv/l7-district": "^2.3.1",
+    "@antv/l7-draw": "^2.4.1",
     "@antv/l7-maps": "^2.3.7",
     "core-js": "^3.6.5",
     "vue": "^2.6.11"
