--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@antv/l7-district": "^2.3.1",
     "@antv/l7-maps": "^2.3.7",
     "core-js": "^3.6.5",
+    "html-to-image": "^1.3.24",
+    "html2canvas": "^1.0.0-rc.7",
     "vue": "^2.6.11"
   },
   "devDependencies": {
